--- a/managedata/templates/index.html
+++ b/managedata/templates/index.html
@@ -134,55 +134,9 @@
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item active">Dashboard</li>
                     </ol>
+                    <!-- Chart -->
                     <div class="row">
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card bg-primary text-white mb-4">
-                                <div class="card-body">Primary Card</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card bg-warning text-white mb-4">
-                                <div class="card-body">Warning Card</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card bg-success text-white mb-4">
-                                <div class="card-body">Success Card</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card bg-danger text-white mb-4">
-                                <div class="card-body">Danger Card</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xl-6">
-                            <div class="card mb-4">
-                                <div class="card-header">
-                                    <i class="fas fa-chart-area me-1"></i>
-                                    Area Chart Example
-                                </div>
-                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-6">
+                        <div class="col-xl-12">
                             <div class="card mb-4">
                                 <div class="card-header">
                                     <i class="fas fa-chart-bar me-1"></i>
@@ -192,6 +146,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Data Table -->
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-table me-1"></i>
@@ -256,6 +211,59 @@
             </footer>
         </div>
     </div>
+    <script type="text/javascript">
+        const getChart = (jsonObj) => {
+            let labels = [];
+            let datasets = [];
+            for (let i in jsonObj) {
+                const index = labels.indexOf(jsonObj[i]["belong"]);
+                if (index >= 0) {
+                    datasets[index]++;
+                } else {
+                    labels.push(jsonObj[i]["belong"]);
+                    datasets.push(1);
+                }
+            }
+
+            const ctx = document.getElementById("myBarChart");
+            const myBarChart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: labels,
+                    datasets: [
+                        {
+                            label: '所属人数',
+                            data: datasets,
+                            backgroundColor: "rgba(219,39,91,0.5)"
+                        }
+                    ],
+                },
+                options: {
+                    title: {
+                        display: true,
+                        text: '所属人数(全体)'
+                    },
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                suggestedMax: 10,
+                                suggestedMin: 0,
+                                stepSize: 10,
+                                callback: function (value, index, values) {
+                                    return value + '人'
+                                }
+                            }
+                        }]
+                    },
+                }
+            });
+        };
+
+        fetch("http://127.0.0.1:8000/managedata/api/v1/person-ls")
+            .then(response => response.json())
+            .then((data) => getChart(data))
+
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
